--- a/v02-argocd-carserv/application-carserv.yml
+++ b/v02-argocd-carserv/application-carserv.yml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: application-carsrv
+  name: car-serv
 spec:
   destination:
     namespace: car-serv
