--- a/v02-argocd-carserv/template/ingress.yml
+++ b/v02-argocd-carserv/template/ingress.yml
@@ -4,6 +4,7 @@ metadata:
   name: car-serv-ingress
   namespace: car-serv
   annotations:
+    kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   ingressClassName: nginx
